[gd_scene load_steps=7 format=3 uid="uid://d1gn05301x4j3"]

[ext_resource type="Script" path="res://scripts/CharacterBody2D.gd" id="1_op0tq"]
[ext_resource type="Texture2D" uid="uid://3dl3vapbbyyf" path="res://images/1stGuy.png" id="2_cb8at"]
[ext_resource type="Script" path="res://scripts/Gun.gd" id="2_fxh18"]
[ext_resource type="Texture2D" uid="uid://er5wr14bks2" path="res://images/Revolver.png" id="3_m6ad3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2use6"]

[sub_resource type="QuadMesh" id="QuadMesh_4nh5r"]

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_op0tq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_2use6")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/CollisionShape2D"]
texture = ExtResource("2_cb8at")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(2, 2)

[node name="Pivot" type="Node2D" parent="CharacterBody2D"]
script = ExtResource("2_fxh18")

[node name="Gun" type="Node2D" parent="CharacterBody2D/Pivot"]
position = Vector2(12, 0)

[node name="MeshInstance2D" type="MeshInstance2D" parent="CharacterBody2D/Pivot/Gun"]
position = Vector2(4.76837e-07, 0)
rotation = -3.15032
scale = Vector2(12, 12.786)
mesh = SubResource("QuadMesh_4nh5r")
texture = ExtResource("3_m6ad3")

[node name="DownRayCast" type="RayCast2D" parent="CharacterBody2D"]

[node name="UpRayCast" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(0, -50)

[node name="LeftRayCast" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(-50, 0)

[node name="RightRayCast" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(50, 0)
